got main and blog page running, but submit redirect is still broken

--- a/templates/submit.html
+++ b/templates/submit.html
@@ -33,13 +33,13 @@
 	    hr {
 	        margin: 20px auto;
 	    }
-	    .blog-content + .blog-content {
+	    .content + .content {
 	        margin-top: 20px;
 	    }
-	    .blog-title {
+	    .title {
 	        font-weight: bold; font-size: 20px;
 	    }
-	    .blog-body {
+	    .body {
 	        margin: 0; font-size: 17px;
 	    }
     </style>
