--- a/templates/main-page.html
+++ b/templates/main-page.html
@@ -50,7 +50,7 @@
         {% for post in blog %}    
         <div class="blog">
             <div class="blog-title">{{post.title}}</div>
-            <pre class="blog-body">{{post.blogContent}}</pre>
+            <pre class="blog-body">{{post.content}}</pre>
         </div>
         {% endfor %}
     </body>
